--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
@@ -60,11 +61,9 @@
   },
   "scripts": {
     "start-js": "node scripts/start.js",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "build-css": "node-sass src/ -o src/",
-    "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive"
+    "start": "npm-run-all start-js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
     "collectCoverageFrom": [
