--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "material-ui": "^0.18.3",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
+    "react-motion": "^0.5.0",
     "react-redux": "5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-transition": "^0.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
