--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
     "sass-loader": "^6.0.6",
     "style-loader": "0.13.1",
